@@ -1,6 +1,6 @@
 # Escape Room Management System
 
-Sistem za upravljanje Escape Room-om razvijen u Java-i sa JavaFX korisničkim interfejsom i MySQL bazom podataka.
+Sistem za upravljanje Escape Room-om razvijen u Java-i sa JavaFX korisničkim interfejsom i MySQL bazom podataka. 
 
 ## Sadržaj
 
@@ -17,34 +17,45 @@ Sistem za upravljanje Escape Room-om razvijen u Java-i sa JavaFX korisničkim in
 
 ## O Projektu
 
-Escape Room Management System je desktop aplikacija koja omogućava kompletno upravljanje escape room poslovanjem. Sistem omogućava praćenje soba, rezervacija, igrača, gaming sesija i finansijskih izvještaja.
+Escape Room Management System je desktop aplikacija koja omogućava kompletno upravljanje escape room poslovanjem.  Sistem omogućava praćenje soba, rezervacija, igrača, gaming sesija i finansijskih izvještaja. 
+
+Projekat je razvijen kao timski rad i sadrži sve potrebne komponente: 
+- **Modeli objekata**:  User, Room, Player, Booking, GameSession (više od 3)
+- **Interfejsi**: DAO (Data Access Object) pattern
+- **Baza podataka**: MySQL sa JDBC konekcijom
+- **JavaFX GUI**: Login, Dashboard, CRUD forme, tabelarni prikazi
+- **CRUD operacije**: Create, Read, Update, Delete nad svim entitetima
+- **Izvoz podataka**:  Izvještaji sa mogućnošću eksporta u PDF format
 
 ## Funkcionalnosti
 
-### Upravljanje Korisnicima
+### Autentifikacija
 - Sigurna autentifikacija sa BCrypt hash-iranjem lozinki
-- Dvije uloge: **ADMIN** i **STAFF**
-- Kreiranje i upravljanje korisničkim nalozima
+- Upravljanje korisničkim nalozima
 
 ### Upravljanje Sobama
 - Dodavanje, izmjena i brisanje escape room soba
 - Praćenje tema, težine, kapaciteta i cijene
 - Aktiviranje/deaktiviranje soba
 - Praćenje prosječnih ocjena
+- Tabelarni prikaz svih soba
 
 ### Upravljanje Rezervacijama (Bookings)
 - Kreiranje novih rezervacija
 - Filtriranje po statusu (PENDING, CONFIRMED, COMPLETED, CANCELLED)
 - Ažuriranje statusa rezervacija
 - Povezivanje rezervacija sa sobama i igračima
+- Tabelarni prikaz svih rezervacija
 
 ### Upravljanje Igračima
 - Registracija novih igrača
+- Izmjena podataka igrača
 - Praćenje statistika igrača: 
   - Ukupan broj odigranih igara
   - Broj pobjeda i poraza
   - Prosječno vrijeme
   - Ukupan broj korištenih savjeta
+- Tabelarni prikaz svih igrača
 
 ### Gaming Sesije
 - Kreiranje sesija sa ili bez rezervacije (walk-in klijenti)
@@ -52,6 +63,7 @@ Escape Room Management System je desktop aplikacija koja omogućava kompletno up
 - Broj korištenih savjeta
 - Ocjene i recenzije
 - Praćenje prihoda po sesiji
+- Tabelarni prikaz svih sesija
 
 ### Dashboard
 - Pregled statistika: 
@@ -62,10 +74,10 @@ Escape Room Management System je desktop aplikacija koja omogućava kompletno up
 - Top 5 igrača - leaderboard
 - Brze akcije za pristup modulima
 
-### Izvještaji
+### Izvještaji i Izvoz
 - Izvještaj performansi soba
 - Izvještaj rezervacija (sa filterima)
-- Izvoz u PDF format
+- **Izvoz u PDF format**
 
 ## Tehnologije
 
@@ -74,11 +86,11 @@ Escape Room Management System je desktop aplikacija koja omogućava kompletno up
 - **MySQL 8.0+** - Baza podataka
 - **BCrypt** - Hash-iranje lozinki
 - **JDBC** - Komunikacija sa bazom podataka
-- **Maven** - Build tool (opciono)
+- **DAO Pattern** - Arhitekturni pattern za pristup podacima
 
 ## Preduslovi
 
-Prije instalacije, potrebno je imati instalirano: 
+Prije instalacije, potrebno je imati instalirano:
 
 1. **Java Development Kit (JDK) 17 ili noviji**
    - [Preuzmi JDK](https://www.oracle.com/java/technologies/downloads/)
@@ -94,8 +106,8 @@ Prije instalacije, potrebno je imati instalirano:
 ### 1. Kloniraj Repozitorij
 
 ```bash
-git clone https://github.com/exuaaq/temp03.git
-cd temp03
+git clone https://github.com/exuaaq/escape-room-managment.git
+cd escape-room-managment
 ```
 
 ### 2. Preuzmi Potrebne Biblioteke
@@ -113,24 +125,24 @@ Potrebne su sljedeće JAR biblioteke u `lib` folderu:
 Pokreni MySQL i izvrši SQL skriptu:
 
 ```bash
-mysql -u root -p < database_setup.sql
+mysql -u root -p < database_setup. sql
 ```
 
-Ili ručno u MySQL klijentu:
+Ili ručno u MySQL klijentu: 
 
 ```sql
 source /putanja/do/database_setup.sql
 ```
 
-Ova skripta će: 
+Ova skripta će:
 - Kreirati bazu podataka `escape_room_db`
 - Kreirati sve potrebne tabele
 - Dodati sample podatke (sobe, igrači, rezervacije, sesije)
-- **NAPOMENA**:  Nema inicijalnog admin korisnika - potrebno je kreirati ručno
+- **NAPOMENA**: Nema inicijalnog admin korisnika - potrebno je kreirati ručno
 
-### 2. Kreiraj Prvog Admin Korisnika
+### 2. Kreiraj Prvog Korisnika
 
-Možeš kreirati admin korisnika na dva načina:
+Možeš kreirati korisnika na dva načina: 
 
 **Opcija A: Preko MySQL-a**
 
@@ -157,45 +169,34 @@ private static final String PASSWORD = ""; // Tvoj MySQL password
 ```
 
 ## Pokretanje Aplikacije
-
-### Preko Komandne Linije
-
-```bash
-# Kompajliranje
-javac -d bin -cp "lib/*" src/main/java/com/escaperoom/**/*. java
-
-# Pokretanje
-java -cp "bin: lib/*" --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml com. escaperoom.EscapeRoomApp
-```
-
-### Preko IDE (IntelliJ IDEA / Eclipse)
-
-1. Otvori projekat u IDE-u
-2. Dodaj JAR biblioteke iz `lib` foldera u projekat
-3. Konfiguriši JavaFX (ako je potrebno)
-4. Pokreni `EscapeRoomApp. java` kao main klasu
+Prije pokretanja dodati bazu podataka
+` mvn clean install`
+` mvn javafx:run `
 
 ## Struktura Projekta
 
 ```
-temp03/
+escape-room-managment/
 ├── src/
 │   └── main/
 │       ├── java/
 │       │   └── com/
 │       │       └── escaperoom/
 │       │           ├── dao/              # Data Access Objects
-│       │           │   ├── BookingDAO.java
+│       │           │   ├── BookingDAO. java
 │       │           │   ├── GameSessionDAO.java
 │       │           │   ├── PlayerDAO.java
 │       │           │   ├── RoomDAO.java
-│       │           │   └── UserDAO. java
+│       │           │   └── UserDAO.java
 │       │           ├── database/         # Database konfiguracija
 │       │           │   └── DatabaseConnection.java
+│       │           ├── interfaces/       # Interfejsi
+│       │           │   ├── Bookable.java
+│       │           │   └── Exportable.java
 │       │           ├── models/           # Model klase
 │       │           │   ├── Booking.java
 │       │           │   ├── BookingStatus.java
-│       │           │   ├── GameSession. java
+│       │           │   ├── GameSession.java
 │       │           │   ├── Player.java
 │       │           │   ├── Room.java
 │       │           │   ├── User.java
@@ -207,17 +208,20 @@ temp03/
 │       │           │   ├── BookingManagementView.java
 │       │           │   ├── DashboardView.java
 │       │           │   ├── GameSessionView.java
-│       │           │   ├── LoginView. java
+│       │           │   ├── LoginView.java
 │       │           │   ├── PlayerManagementView.java
-│       │           │   ├── ReportsView. java
+│       │           │   ├── ReportsView.java
 │       │           │   ├── RoomManagementView.java
 │       │           │   └── UserManagementView.java
-│       │           └── EscapeRoomApp.java # Main aplikacija
+│       │           └── Main.java         # Main aplikacija
 │       └── resources/
+│           ├── database_schema.sql
+│           ├── migration_booking_id_nullable.sql
 │           └── style.css               # CSS stilovi
-├── lib/                                # Eksterne biblioteke
-├── database_setup.sql                  # SQL skripta za setup
-└── README. md
+├── . gitignore
+├── pom.xml                              # Maven konfiguracija
+├── PROJECT_SUMMARY.md
+└── README.md
 ```
 
 ## Upotreba
@@ -236,77 +240,54 @@ Nakon logina, vidjet ćeš dashboard sa:
 - Top 5 igrača
 - Brzim akcijama za pristup modulima
 
-### Moduli
+### CRUD Operacije
 
-**Room Management**
-- Pregledaj sve sobe
-- Dodaj novu sobu
-- Izmijeni ili deaktiviraj postojeću sobu
+**Room Management (Upravljanje Sobama)**
+- **Create**: Dodaj novu sobu
+- **Read**: Pregledaj sve sobe u tabeli
+- **Update**: Izmijeni postojeću sobu
+- **Delete**: Obriši ili deaktiviraj sobu
 
-**Booking Management**
-- Pregledaj sve rezervacije
-- Kreiraj novu rezervaciju
-- Potvrdi, završi ili otkaži rezervacije
-- Filtriraj po statusu
+**Booking Management (Upravljanje Rezervacijama)**
+- **Create**: Kreiraj novu rezervaciju
+- **Read**: Pregledaj sve rezervacije u tabeli
+- **Update**:  Potvrdi, završi ili otkaži rezervacije
+- **Delete**:  Obriši rezervaciju
+- **Filter**: Filtriraj po statusu
 
-**Player Management**
-- Pregledaj sve igrače
-- Dodaj novog igrača
-- Izmijeni podatke igrača
-- Vidi statistike igrača
+**Player Management (Upravljanje Igračima)**
+- **Create**: Dodaj novog igrača
+- **Read**: Pregledaj sve igrače u tabeli
+- **Update**: Izmijeni podatke igrača
+- **Delete**: Obriši igrača
 
-**Game Sessions**
-- Kreiraj novu gaming sesiju
-- Poveži sa rezervacijom ili kreiraj walk-in sesiju
-- Prati vrijeme, savjete, ocjene
+**Game Sessions (Gaming Sesije)**
+- **Create**: Kreiraj novu gaming sesiju
+- **Read**:  Pregledaj sve sesije u tabeli
+- **Update**: Izmijeni sesiju
+- **Filter**: Poveži sa rezervacijom ili kreiraj walk-in sesiju
 
-**Reports**
+**User Management (Upravljanje Korisnicima)**
+- **Create**: Kreiraj nove korisnike
+- **Read**: Pregledaj sve korisnike u tabeli
+- **Update**: Izmijeni postojeće korisnike
+- **Delete**: Obriši korisnike
+
+### Izvještaji i PDF Izvoz
+
+**Reports (Izvještaji)**
 - Generiši izvještaje performansi soba
 - Izvještaj rezervacija sa filterima
-- Izvezi u PDF
-
-**User Management** (samo za ADMIN)
-- Kreiraj nove korisnike (ADMIN ili STAFF)
-- Izmijeni postojeće korisnike
-- Obriši korisnike
+- **Izvezi izvještaje u PDF format**
 
 ## Sigurnost
 
 - **Lozinke**: Sve lozinke su hash-irane pomoću BCrypt algoritma sa saltom
 - **SQL Injection**:  Koriste se PreparedStatement-i za sve database upite
-- **Autorizacija**: Samo ADMIN korisnici mogu pristupiti upravljanju korisnicima
-- **Validacija**:  Svi input podaci se validiraju prije obrade
+- **Validacija**: Svi input podaci se validiraju prije obrade
 
-## Važne Napomene
-
-1. **Database Credentials**: Nikada ne komituj database lozinke u repozitorij
-2. **Default Admin**: Promijeni default admin lozinku nakon prvog logina
-3. **Backup**: Redovno pravi backup baze podataka
-4. **Production**: Za produkciju, konfiguriši dodatne sigurnosne mjere
-
-## Doprinos
-
-Za sve prijedloge, bugove ili nove funkcionalnosti:
-
-1. Fork repozitorij
-2. Kreiraj feature branch (`git checkout -b feature/NovaFunkcionalnost`)
-3. Commit izmjene (`git commit -m 'Dodao novu funkcionalnost'`)
-4. Push na branch (`git push origin feature/NovaFunkcionalnost`)
-5. Otvori Pull Request
 
 ## Licence
 
 Ovaj projekat je razvijen u obrazovne svrhe. 
 
-## Autor
-
-**exuaaq**
-- GitHub: [@exuaaq](https://github.com/exuaaq)
-
-## Podrška
-
-Za pitanja ili probleme, otvori issue na GitHub repozitoriju.
-
----
-
-**Uživaj u korištenju Escape Room Management System-a!**
